<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vibify</string>
    <string name="action_settings">Settings</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="phoneAppLabel">Phone</string>
    <string name="nav_draw_battery_setting">Off on low battery</string>
    <string name="nav_draw_screen_setting">Turn screen on</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="landing_msg">Check out all my apps!</string>
    <string name="playStore">Play Store</string>
    <string name="cancel">Cancel</string>
    <string name="aboutFooter">Vibify \u00a9 Big Android Dev. All Rights Reserved.\nVersion:</string>
    <string name="aboutText">Vibify aims to inform you for any pending notifications on your
        phone. To do that, Vibify does a very small vibration when you pick up your phone. Vibify
        works only if your phone remains locked and still, saving up as much battery as possible.
        Select the applications you want to be supported by Vibify and enjoy.\nThanks for downloading.</string>
    <string name="about_title">About</string>
    <string name="tutorial1_title">Welcome to Vibify!</string>
    <!--<string name="showcase_message">Click Let\'s begin to start the tutorial.</string>-->
    <string name="lets_begin">Let\'s Start</string>
    <!--<string name="next">Next</string>-->
    <string name="tutorial2_title">Application List</string>
    <!--<string name="showcase_message_2">Here you can view all your applications that are supported by Vibify.</string>-->
    <!--<string name="showcase_title_3">Enable/Disable an app</string>-->
    <!--<string name="showcase_message_3">By clicking an application you can enable and disable it. The indicator to the right shows you the state of each application.</string>-->
    <!--<string name="showcase_title_4">What happens next…</string>-->
    <!--<string name="showcase_message_4">When you have a pending notification from one of the selected apps, Vibify will inform you at the time you move your phone. You will feel a short vibration after trying to pick up your phone.</string>-->
    <!--<string name="showcase_title_5">Navigation Drawer</string>-->
    <!--<string name="showcase_message_5">Check out the setting and some more information about Vibify here.</string>-->
    <string name="tutorial4_title">That\'s it!</string>
    <string name="tutorial_thanks">Thank you for using Vibify. We hope you enjoy it as we do.\n\u00a9 Big Android Dev</string>
    <!--<string name="showcase_title_enable">Enable Vibify</string>-->
    <!--<string name="showcase_message_enable">Click here to enable or disable Vibify. This will open your device settings. Then enable Vibify and click the back button to return.</string>-->
    <!--<string name="showcase_title_add_app">Add an Application</string>-->
    <!--<string name="showcase_message_add_app">Hit the plus sign to add any installed application to the support list.</string>-->
    <!--<string name="showcase_title_more_prefs">More Preferences</string>-->
    <!--<string name="showcase_message_more_prefs">You can tweak even more some options with the "3-dot" buttons.</string>-->
    <!--<string name="showcase_title_prefs">Global Preferences</string>-->
    <!--<string name="showcase_message_prefs">Here you can find some global settings of the app. Worth\'s a visit ☺</string>-->
    <string name="add_app">Add Application</string>
    <string name="remove_app_msg">Do you want to remove application</string>
    <string name="do_it">Do It</string>
    <string name="remove_app">Remove Application</string>
    <string name="preferences">Preferences</string>
    <string name="vibration_settings_cat">Vibration Settings</string>
    <string name="vibration_duration_listpref">Duration of the Vibration</string>
    <string name="vibration_duration_listpref_sum">Select the desired duration of the vibration notification.</string>
    <string name="duration_short">Short</string>
    <string name="duration_medium">Medium (default)</string>
    <string name="duration_long">Long</string>
    <string name="duration_extra_long">Extra Long</string>
    <string name="duration_50">50</string>
    <string name="duration_150">150</string>
    <string name="duration_250">250</string>
    <string name="duration_350">350</string>
    <string name="movement_sensing_cat">Movement Sensing</string>
    <string name="stand_still_thresh">Still Threshold</string>
    <string name="stand_still_thresh_sum">Define the time needed for the phone to be still before enabling Vibify.</string>
    <string name="stand_still_3">3 seconds (default)</string>
    <string name="stand_still_5">5 seconds</string>
    <string name="stand_still_7">7 seconds</string>
    <string name="stand_still_10">10 seconds</string>
    <string name="stand_still_value_3">3</string>
    <string name="stand_still_value_5">5</string>
    <string name="stand_still_value_7">7</string>
    <string name="stand_still_value_10">10</string>
    <string name="movement_sleep_duration">Sleep Time</string>
    <string name="movement_sleep_duration_sum">Define the duration you want Vibify to sleep in case of movement detection or covered screen (proximity sensing).</string>
    <string name="movement_sleep_duration_3">3 seconds</string>
    <string name="movement_sleep_duration_5">5 seconds</string>
    <string name="movement_sleep_duration_7">7 seconds (default)</string>
    <string name="movement_sleep_duration_10">10 seconds</string>
    <string name="movement_sleep_duration_15">15 seconds</string>
    <string name="movement_sleep_duration_20">20 seconds</string>
    <string name="movement_sleep_duration_30">30 seconds</string>
    <string name="movement_sleep_duration_value_3">3</string>
    <string name="movement_sleep_duration_value_5">5</string>
    <string name="movement_sleep_duration_value_7">7</string>
    <string name="movement_sleep_duration_value_10">10</string>
    <string name="movement_sleep_duration_value_15">15</string>
    <string name="movement_sleep_duration_value_20">20</string>
    <string name="movement_sleep_duration_value_30">30</string>
    <string name="quiet_hours_title">Quiet Hours</string>
    <string name="times_to_show_title">Times to notify</string>
    <string name="times_to_show_sum">Define the number of times you want Vibify to notify you about the same notification.</string>
    <string name="times_to_show_1">once</string>
    <string name="times_to_show_2">twice</string>
    <string name="times_to_show_3">three times</string>
    <string name="times_to_show_5">five times</string>
    <string name="times_to_show_value_1">1</string>
    <string name="times_to_show_value_2">2</string>
    <string name="times_to_show_value_3">3</string>
    <string name="times_to_show_value_5">5</string>
    <string name="notify">Notify</string>
    <string name="advanced_sensing_cat">Advanced Sensing</string>
    <string name="proximity_sensor_check">Proximity Sensor</string>
    <string name="proximity_sensor_check_sum">Enabling that will cause Vibify not to run if your screen is covered (pocket, case, hands, dirt). VERY EXPERIMENTAL! Use with caution!\n⊙﹏⊙</string>
    <string name="good_night">Good Night</string>
    <string name="good_morning">Good Morning</string>
    <string name="instructions_title">Instructions</string>
    <string name="credits">Credits</string>
    <string name="error_licencing_app">It seems that you are using an outdated version of the app. Please update through Play Store.</string>
    <string name="buy_premium">You shall not pass…</string>
    <string name="naaaah">Naaaah</string>
    <string name="buy_premium_text">If you want to select more than 5 application you need to buy the Premium Version of Vibify. Consider this as a donation to keep my coffee mug full ☕!\n\nThank you,\n\u00a9 Big Android Dev</string>
    <string name="yeaaah">Yeaaah</string>
    <string name="support">Support</string>
    <string name="title_activity_lockscreen">Lockscreen</string>
    <string name="is_disabled_warning">Vibify is disabled</string>
    <string name="please_rate">Are you enjoying Vibify?</string>
    <string name="please_rate_text">Would you like to give Vibify a rating? This will help me develop and improve the app even further.\n☺ Thank you!</string>
    <string name="safe_turnoff_title">Safe Turn Off</string>
    <string name="safe_turnoff_sum">After the selected amount of time, Vibify will stop, in order to let the phone sleep and reduce battery drain. Notice that this will STOP Vibify from working after the selected amount of time.</string>
    <string name="safe_turnoff_delay_05">30 min</string>
    <string name="safe_turnoff_delay_1">1 hour</string>
    <string name="safe_turnoff_delay_2">2 hours</string>
    <string name="safe_turnoff_delay_never">never (default)</string>
    <string name="safe_turnoff_delay_value_05">1800</string>
    <string name="safe_turnoff_delay_value_1">3600</string>
    <string name="safe_turnoff_delay_value_2">7200</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="ok">OK</string>
    <string name="title_activity_about">AboutActivity</string>
    <!--<string name="title_section1">Section 1</string>-->
    <!--<string name="title_section2">Section 2</string>-->
    <!--<string name="title_section3">Section 3</string>-->
    <!--<string name="hello_world">Hello world!</string>-->
    <string name="title_activity_tutorial2">Tutorial</string>
    <string name="tutorial1_message">Click to turn Vibify on. Return to this screen by pressing the \'Back\' key.</string>
    <string name="tutorial1_switch">Turn ON/OFF</string>
    <string name="tutorial2_message">Select for which applications you want Vibify to work…</string>
    <string name="tutorial3_title">Vibify Settings</string>
    <string name="tutorial3_message">Tune your Vibify settings! Click the three dots for more information and configuration</string>
    <string name="tutorial4_message">Click the button bellow to get a test notification. Then, lock your device and leave it steady on the table for 5 seconds. Then pick it up and enjoy!</string>
    <string name="tutorial4_button">Throw Test Notification</string>
    <string name="tutorial_finish">Finish</string>

</resources>
